--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^0.21.4",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.0.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -17,6 +18,7 @@
     "express-validator": "^6.13.0",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
+    "multer": "^1.4.3",
     "mysql2": "^2.3.2",
     "nodemon": "^2.0.12",
     "sequelize": "^6.6.5"
