--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www"
   },
   "dependencies": {
     "axios": "^0.21.4",
@@ -20,10 +21,11 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.14",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
+    "nodemon": "^2.0.12",
     "sequelize-cli": "^6.2.0"
   },
   "description": "<h1>Projeto Integrador - Helper House</h1>",
