chore: insert api viacep

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.13.0",
     "http-errors": "~1.6.3",
+    "jquery-mask-plugin": "^1.14.16",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "mysql2": "^2.3.2",
